# time_sync

./: .gitignore  CMakeLists.txt  demo.cpp  readme.md
include/: any.h  point_cloud.h  pose.h  sync_sensor.h  synchronizer.h
src/: plACE_HOLDER.cpp  sync_sensor.cpp  synchronizer.cpp
